# project

./: .gitignore  README.md  ScumOxygen.sln
docs/: comparison_2026-03-18_roy_kimi_main.md  engineering_journal.md
reports/: oxygen_parity_gap_2026-03-18.md  research_log.md
scripts/: Build-HostedPackage.ps1  Test-HostedBootstrap.ps1
src/ScumOxygen.Bootstrap/: Plugin.cs  Program.cs  ScumOxygen.Bootstrap.csproj
src/ScumOxygen.Cli/: Program.cs  ScumOxygen.Cli.csproj
src/ScumOxygen.Control/: Program.cs  control.config.json
src/ScumOxygen.Control/Properties/: launchSettings.json
src/ScumOxygen.Control/wwwroot/: app.css  app.js  index.html
src/ScumOxygen.Core/: ApiController.cs  CommandQueue.cs  CommandRegistry.cs  CommandService.cs  ConsoleCommandSender.cs  ControlClient.cs  DataFile.cs  Database.cs  HookService.cs  HostedPanelCommandSender.cs  IPlugin.cs  LogTailer.cs  Logger.cs  NativeBridgeService.cs  OxygenAPI.cs  OxygenAttributes.cs  OxygenPaths.cs  OxygenRuntime.cs  OxygenServices.cs  OxygenWeb.cs  PermissionManager.cs  PermissionService.cs  PlayerRegistry.cs  Plugin.cs  PluginCompiler.cs  PluginLoadContext.cs  PluginManager.cs  RconClientLite.cs  RuntimeConfig.cs  ScumOxygen.Core.csproj  ServerEventPump.cs  TimerService.cs  WebApiService.cs
src/ScumOxygen.Core/Interfaces/: ICommandParser.cs  IRconClient.cs  IRconConnectionPool.cs  IScriptApi.cs
src/ScumOxygen.Native/: CMakeLists.txt  injector.cpp
src/ScumOxygen.Native/include/: scum_sdk.h  sdk.h
src/ScumOxygen.Native/src/: bridge.cpp  dllmain.cpp  hooks.cpp  memory.cpp  ue4_sdk.cpp
src/ScumOxygen.Rcon/: RconClient.cs  ScumOxygen.Rcon.csproj  ScumRconClient.cs
src/ScumOxygen.SamplePlugin/: Class1.cs  SamplePlugin.cs  ScumOxygen.SamplePlugin.csproj
src/ScumOxygen.Scripting/: Class1.cs  ScriptCompiler.cs  ScriptEngine.cs  ScriptLoadContext.cs  ScumOxygen.Scripting.csproj
src/ScumOxygen.ServerProxy/: CMakeLists.txt  version.cpp  version.def
src/ScumOxygen.Tests/: ListPlayersParserTests.cs  RconPacketTests.cs  ScumOxygen.Tests.csproj  StatusParserTests.cs
(+10 files in other folders)
